// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: TexasFRC
message TexasFRC
{	
	
	
	repeated TFRCDefine TFRC = 1; // TFRC

}

// Defined in table: TFRC
message TFRCDefine
{	
	
	
	optional int32 Id = 1; // id
	
	
	optional string Name = 2; // 名字
	
	
	optional int32 Type = 3; 
	
	
	optional int32 High = 4; 
	
	
	optional int32 Fold = 5; 
	
	
	optional int32 Call = 6; 
	
	
	optional int32 Raise = 7; 
	
	
	optional int32 AllIn = 8; 

}

